# Report_Summarization

./: .gitignore  README.md  pyproject.toml  requirements.txt
report_summarization/: .gitignore  README.md  pyproject.toml
report_summarization/src/report_summarization/: crew.py  main.py
report_summarization/src/report_summarization/config/: agents.yaml  tasks.yaml
