[project]
name = "report_summarization"
version = "0.1.0"
description = "report_summarization using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.0",
]

[project.scripts]
report_summarization = "report_summarization.main:run"
run_crew = "report_summarization.main:run"
train = "report_summarization.main:train"
replay = "report_summarization.main:replay"
test = "report_summarization.main:test"
run_with_trigger = "report_summarization.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
